--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -32,10 +32,12 @@
 		.avatar {
 			position: relative;
 			display: block;
+			max-width:100%;
 			margin-bottom: _size(element-margin);
 
 			img {
 				display: block;
+				max-width:100%;
 				margin: 0 auto;
 				border-radius: 100%;
 				box-shadow: 0 0 0 1.5em _palette(bg);
@@ -44,6 +46,7 @@
 			&:before {
 				content: '';
 				display: block;
+				max-width:100%;
 				position: absolute;
 				top: 50%;
 				left: -3em;
